force-app/main/default/objects/Public_Enquiry__c/Public_Enquiry__c.object-meta.xml
<CustomObject>
    <label>Public Enquiry</label>
    <nameField>
        <displayFormat>PE-{0000000}</displayFormat>
        <label>Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>