force-app/main/default/objects/Public_Enquiry__c/fields/Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>Consent_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Given</label>
    <type>Checkbox</type>
</CustomField>