force-app/main/default/objects/Public_Enquiry__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Republic of Ireland</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
                <label>United Kingdom</label>
            </value>
            <value>
                <fullName>USA</fullName>
                <label>United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>