force-app/main/default/objects/Public_Enquiry__c/fields/Country_Other__c.field-meta.xml
<CustomField>
    <fullName>Country_Other__c</fullName>
    <inlineHelpText>If you selected Other for Country, please type your country here.</inlineHelpText>
    <label>Country (Other)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>