force-app/main/default/objects/Public_Enquiry__c/fields/Enquirer_Email__c.field-meta.xml
<CustomField>
    <fullName>Enquirer_Email__c</fullName>
    <label>Enquirer Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>