force-app/main/default/objects/Public_Enquiry__c/fields/Enquirer_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquirer_Name__c</fullName>
    <label>Enquirer Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>