force-app/main/default/objects/Public_Enquiry__c/fields/Enquirer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Enquirer_Phone__c</fullName>
    <label>Enquirer Phone</label>
    <type>Phone</type>
</CustomField>