force-app/main/default/objects/Public_Enquiry__c/fields/Lawful_Basis__c.field-meta.xml
<CustomField>
    <fullName>Lawful_Basis__c</fullName>
    <label>Lawful Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent</fullName>
                <default>true</default>
                <label>Consent</label>
            </value>
            <value>
                <fullName>Legitimate Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>