force-app/main/default/objects/Public_Enquiry__c/fields/Programme_Level__c.field-meta.xml
<CustomField>
    <fullName>Programme_Level__c</fullName>
    <label>Programme Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UG</fullName>
                <label>Undergraduate</label>
            </value>
            <value>
                <fullName>PG</fullName>
                <label>Postgraduate</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>