force-app/main/default/objects/Public_Enquiry__c/fields/Programme_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Programme_Of_Interest__c</fullName>
    <label>Programme of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Sciences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>