force-app/main/default/objects/Public_Enquiry__c/fields/Related_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Related_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Enquiry</label>
    <referenceTo>Public_Enquiry__c</referenceTo>
    <relationshipLabel>Duplicate Enquiries</relationshipLabel>
    <relationshipName>Duplicate_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>