force-app/main/default/objects/Public_Enquiry__c/fields/Retention_Until__c.field-meta.xml
<CustomField>
    <fullName>Retention_Until__c</fullName>
    <defaultValue>TODAY() + 730</defaultValue>
    <label>Retention Until</label>
    <type>Date</type>
</CustomField>