force-app/main/default/objects/Public_Enquiry__c/validationRules/VR_Country_Other_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Country_Other_Required</fullName>
    <active>true</active>
    <description>If Country is Other, the user must specify which country.</description>
    <errorConditionFormula>AND(
  TEXT(Country__c) = &apos;Other&apos;,
  ISBLANK(Country_Other__c)
)</errorConditionFormula>
    <errorDisplayField>Country_Other__c</errorDisplayField>
    <errorMessage>Please specify your country in the Country (Other) field.</errorMessage>
</ValidationRule>