force-app/main/default/objects/Public_Enquiry__c/validationRules/VR_Enquirer_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Enquirer_Email_Format</fullName>
    <active>true</active>
    <description>Enquirer email must be a valid email format.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Enquirer_Email__c)),
  NOT(REGEX(Enquirer_Email__c, &apos;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&apos;))
)</errorConditionFormula>
    <errorDisplayField>Enquirer_Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address.</errorMessage>
</ValidationRule>