force-app/main/default/objects/Public_Enquiry__c/validationRules/VR_Required_Public_Enquiry_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Required_Public_Enquiry_Fields</fullName>
    <active>true</active>
    <description>Country, Programme Level, Email and explicit Consent are required.</description>
    <errorConditionFormula>OR(
  ISBLANK(TEXT(Country__c)),
  ISBLANK(TEXT(Programme_Level__c)),
  ISBLANK(Enquirer_Email__c),
  NOT(Consent_Given__c)
)</errorConditionFormula>
    <errorMessage>Country, Programme Level, Email and explicit consent are all required.</errorMessage>
</ValidationRule>